fix spirit example targets

--- a/libs/spirit/CMakeLists.txt
+++ b/libs/spirit/CMakeLists.txt
@@ -17,7 +17,7 @@ boost_library_project(
   spirit
   #  SRCDIRS 
   TESTDIRS  test
-  EXAMPLESDIRS
+  EXAMPLEDIRS
     example/qi/calc6
     example/qi/calc7
     example/qi
