--- a/libs/spirit/example/qi/calc6/CMakeLists.txt
+++ b/libs/spirit/example/qi/calc6/CMakeLists.txt
@@ -1,9 +1,7 @@
-foreach(
-    example
-    calc6
-)
 boost_add_executable(
-    ${example}
-)
-endforeach(
+    calc6
+    calc6.cpp
+    calc6a.cpp
+    calc6b.cpp
+    calc6c.cpp
 )
