--- a/libs/spirit/example/scheme/example/generate_qiexpr/CMakeLists.txt
+++ b/libs/spirit/example/scheme/example/generate_qiexpr/CMakeLists.txt
@@ -1,9 +1,5 @@
-foreach(
-    example
-    generate_qi_test
-)
 boost_add_executable(
-    ${example}
-)
-endforeach(
+    generate_qi_test
+    generate_qi_test.cpp
+    generate_qiexpr.cpp
 )
