--- a/libs/spirit/example/qi/calc7/CMakeLists.txt
+++ b/libs/spirit/example/qi/calc7/CMakeLists.txt
@@ -1,9 +1,7 @@
-foreach(
-    example
-    calc7
-)
 boost_add_executable(
-    ${example}
-)
-endforeach(
+    calc7
+    calc7.cpp
+    calc7a.cpp
+    calc7b.cpp
+    calc7c.cpp
 )
