--- a/libs/spirit/example/scheme/example/parse_qiexpr/CMakeLists.txt
+++ b/libs/spirit/example/scheme/example/parse_qiexpr/CMakeLists.txt
@@ -1,9 +1,6 @@
-foreach(
-    example
-    parse_qi_test
-)
 boost_add_executable(
-    ${example}
-)
-endforeach(
+    parse_qi_test
+    parse_qi_test.cpp
+    generate_sexpr_to_ostream.cpp
+    parse_qiexpr.cpp
 )
