disable examples with compile error

--- a/libs/spirit/example/karma/CMakeLists.txt
+++ b/libs/spirit/example/karma/CMakeLists.txt
@@ -2,7 +2,7 @@ foreach(
     example
     complex_number
     complex_number_adapt
-    calc2_ast_dump
+    # calc2_ast_dump
     generate_code
     quick_start1
     customize_use_as_container
@@ -18,14 +18,14 @@ foreach(
     reorder_struct
     actions
     complex_number_easier
-    auto_facilities
+    # auto_facilities
     num_matrix
     customize_embedded_container
     reference
     mini_xml_karma
     key_value_sequence
     quoted_strings
-    calc2_ast_rpn
+    # calc2_ast_rpn
     # basic_facilities
 )
 boost_add_executable(
