--- a/libs/spirit/example/scheme/example/parse_qiexpr/CMakeLists.txt
+++ b/libs/spirit/example/scheme/example/parse_qiexpr/CMakeLists.txt
@@ -3,4 +3,6 @@ boost_add_executable(
     parse_qi_test.cpp
     generate_sexpr_to_ostream.cpp
     parse_qiexpr.cpp
+    COMPILE_FLAGS
+    "-I../.."
 )
