fix boost::asio example compilation

--- a/libs/asio/example/porthopper/CMakeLists.txt
+++ b/libs/asio/example/porthopper/CMakeLists.txt
@@ -5,6 +5,10 @@ foreach(
 )
 boost_add_executable(
     ${example}
+    DEPENDS
+    boost_system
+    TARGET_PREFIX
+    "porthopper-"
 )
 endforeach(
 )
