--- a/libs/asio/example/serialization/CMakeLists.txt
+++ b/libs/asio/example/serialization/CMakeLists.txt
@@ -5,6 +5,11 @@ foreach(
 )
 boost_add_executable(
     ${example}
+    DEPENDS
+    boost_serialization
+    boost_system
+    TARGET_PREFIX
+    "serialization-"
 )
 endforeach(
 )
