--- a/libs/asio/example/ssl/CMakeLists.txt
+++ b/libs/asio/example/ssl/CMakeLists.txt
@@ -5,6 +5,13 @@ foreach(
 )
 boost_add_executable(
     ${example}
+    LINK_LIBS
+    crypto
+    ssl
+    DEPENDS
+    boost_system
+    TARGET_PREFIX
+    "ssl-"
 )
 endforeach(
 )
