--- a/libs/asio/example/allocation/CMakeLists.txt
+++ b/libs/asio/example/allocation/CMakeLists.txt
@@ -4,6 +4,10 @@ foreach(
 )
 boost_add_executable(
     ${example}
+    DEPENDS
+    boost_system
+    TARGET_PREFIX
+    "allocation-"
 )
 endforeach(
 )
