--- a/libs/asio/example/tutorial/timer5/CMakeLists.txt
+++ b/libs/asio/example/tutorial/timer5/CMakeLists.txt
@@ -4,6 +4,11 @@ foreach(
 )
 boost_add_executable(
     ${example}
+    DEPENDS
+    boost_thread
+    boost_system
+    TARGET_PREFIX
+    "timer5-"
 )
 endforeach(
 )
