disable broken examples

--- a/libs/spirit/example/lex/CMakeLists.txt
+++ b/libs/spirit/example/lex/CMakeLists.txt
@@ -8,9 +8,9 @@ foreach(
     #example1
     #example2
     #example3
-    example4
-    example5
-    example6
+    #example4
+    #example5
+    #example6
     reference
     #custom_token_attribute
     print_numbers
