--- a/libs/spirit/example/lex/CMakeLists.txt
+++ b/libs/spirit/example/lex/CMakeLists.txt
@@ -3,7 +3,7 @@ foreach(
     word_count_functor_flex
     word_count
     word_count_lexer
-    strip_comments
+    #strip_comments
     strip_comments_lexer
     #example1
     #example2
@@ -13,7 +13,7 @@ foreach(
     #example6
     reference
     #custom_token_attribute
-    print_numbers
+    #print_numbers
     word_count_functor
 )
 boost_add_executable(
