--- a/libs/filesystem/v2/src/CMakeLists.txt
+++ b/libs/filesystem/v2/src/CMakeLists.txt
@@ -6,7 +6,7 @@
 #
 boost_add_library(
   filesystem
-  operations.cpp path.cpp portability.cpp utf8_codecvt_facet.cpp
+  v2_operations.cpp v2_path.cpp v2_portability.cpp
   SHARED_COMPILE_FLAGS "-DBOOST_FILESYSTEM_DYN_LINK=1"
   STATIC_COMPILE_FLAGS "-DBOOST_FILESYSTEM_STATIC_LINK=1"
   DEPENDS boost_system
