--- a/libs/asio/example/timeouts/CMakeLists.txt
+++ b/libs/asio/example/timeouts/CMakeLists.txt
@@ -3,7 +3,7 @@ foreach(
     datagram_receive_timeout
     stream_receive_timeout
     connect_timeout
-    accept_timeout
+    # accept_timeout
 )
 boost_add_executable(
     ${example}
